examples/neg/issue919.effekt
effect tick(): Unit

def main() = {
  region r {
    var k in r = box { () } // ERROR tick escapes
    try {
      k = box { do tick() }
    } with tick { () => () }
    k()
  } 
}